// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getRawCommits with commitsScope > should filter commits by multiple paths 1`] = `
[
  "693492a",
  "0cf7ae2",
  "10bfbf9",
  "8b2b221",
  "68ef725",
  "32f7221",
  "c46e531",
  "bf8371f",
  "4001441",
  "037ebd8",
  "d2e5287",
  "d569b3d",
  "a59963f",
  "0c6cf75",
  "2f17c70",
  "4e4f71f",
  "79274ca",
  "be9204c",
  "aa08d6a",
  "c46e41b",
  "3132b13",
  "866f177",
  "747f953",
  "9054b8a",
  "c1f942a",
  "80eeecf",
  "2b8c32c",
  "011abc0",
  "8bbb9be",
  "8ad16fd",
  "a934ed4",
]
`;

exports[`getRawCommits with commitsScope > should filter commits by specific path 1`] = `
[
  "0cf7ae2",
  "10bfbf9",
  "8b2b221",
  "c46e531",
  "037ebd8",
  "0c6cf75",
  "2f17c70",
  "79274ca",
  "c46e41b",
  "c1f942a",
  "8ad16fd",
  "a934ed4",
]
`;

exports[`getRawCommits with commitsScope > should use cwd as default scope when not provided 1`] = `
[
  "6d4412d",
  "cb1e944",
  "2aa65d9",
  "693492a",
  "0cf7ae2",
  "10bfbf9",
  "8b2b221",
  "68ef725",
  "32f7221",
  "c46e531",
  "bf8371f",
  "4001441",
  "037ebd8",
  "d2e5287",
  "d569b3d",
  "a59963f",
  "0c6cf75",
  "2f17c70",
  "4e4f71f",
  "79274ca",
  "be9204c",
  "aa08d6a",
  "c46e41b",
  "3132b13",
  "866f177",
  "747f953",
  "9054b8a",
  "c1f942a",
  "80eeecf",
  "2b8c32c",
  "011abc0",
  "5bd64fe",
  "8bbb9be",
  "750c55d",
  "d399c4f",
  "079b693",
  "8ad16fd",
  "51a8366",
  "0515831",
  "003e291",
  "a934ed4",
  "1d98fa2",
]
`;
